--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+</head>
+<body style="background-color:rgba(231, 239, 240, 0.595);">
+    <h1 style="color:rgb(5, 10, 15);"> Prashanth's Portfolio</h1>
+    <h1 style="color:rgb(21, 23, 21);">I'm a Web Developer</h1>
+    <hr>
+    <h1 style="color: rgb(11, 14, 3);">My Projects</h1>
+    <a href="./movie.html"><p style="font-size: 25px;">1.Top 5 Animal Lead Movies Of All Time</p> </a>
+    <img src="./assets/images/Screenshot 2024-09-22 at 11-05-51 Top 5 My Favourtie Movies Of All Time.png" width="350" height="350"/>
+    <a href="./public/brithday.html"><p style="font-size: 25px;">2.Birthday Invitation</p> </a>
+    <img src="./assets/images/Screenshot 2024-09-22 at 11-08-28 .png" width="350" height="350"/>
+    <a href="./about.html"><h3>About me</h3></a>
+    <a href="./public/contact.html"><h3>Contact Details</h3></a>
+</body>
+</html>
